# Min-Sum-C-QEC

./: .gitignore  B1_matrix.txt  CMakeLists.txt  README.MD  comparison.py  datos_exportados_72.txt  expected_output.txt  input.txt  input2.txt  input3.txt  long_test.py  main.c  main.ipynb  main.py  min_sum.c  min_sum_csc.c  output.txt  output2.txt  output_comparison.txt  output_test_784.txt  output_test_csc.txt  output_test_csc_144.txt  setup.py  test.py  test_csc.py  wrapper.c  wrapper.pyx  wrapper_csc.c  wrapper_csc.pyx
include/: compute_check_to_value_msg.h  min_sum.h  min_sum_csc.h
input/: input.txt  input2.txt  input_sliding.txt
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
output/: output_test_csc_144.txt  output_test_csc_288.txt
src_c/: min_sum.c  min_sum_csc.c
src_python/: IBM_STIM.py  comparison.py  comparison_matrix.py  dem_to_matrices.py  long_test.py  main.ipynb  main.py  save_matrix.py  setup.py  test_csc.py
